<?xml version="1.0" encoding="utf-8"?>

<!-- Universidad Abierta y a Distancia de México
Asignatura: Programación móvil
Unidad 3: Aplicaciones Android con conexión a base de datos
Actividad 2: Preparando el desarrollo de aplicaciones Android
Alumno: Angel Isaac Nabor Torres
Matrícula: ES1921013978
Grupo: DS-DPMO-2301-B2-002
Docente: Verónica Espinoza Romo -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <View
        android:id="@+id/fondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="14dp"
        android:text="@string/titulomainactivity"
        android:textColor="@color/cardview_light_background"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imagenprincipal"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintStart_toStartOf="@+id/fondo"
        app:layout_constraintTop_toTopOf="@+id/fondo" />

    <ImageView
        android:id="@+id/imagenprincipal"
        android:layout_width="156dp"
        android:layout_height="117dp"
        android:layout_gravity="center_horizontal|center_vertical|top"
        android:contentDescription="Imagen principal"
        android:scaleType="fitCenter"
        android:src="@drawable/instrumentos"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/fondo" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="72dp"
        android:padding="15dp"
        app:layout_constraintBottom_toTopOf="@+id/DatosGenerales"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/fondo">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >

            <TextView
                android:id="@+id/tvviento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/insviento"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvcuerda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inscuerda"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <ImageButton
                android:id="@+id/botonViento"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/insviento"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/iviento" />

            <ImageButton
                android:id="@+id/botonCuerdas"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/inscuerda"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/icuerda" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/tvpercusion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/inspercusion"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvelectricos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/inselectricos"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp">

            <ImageButton
                android:id="@+id/botonPercusion"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginEnd="5dp"
                android:contentDescription="@string/inspercusion"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ipercusion" />

            <ImageButton
                android:id="@+id/botonElectricos"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/inselectricos"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ielectricos" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/DatosGenerales"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical|bottom"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="16dp"
        android:text="@string/datosgral"
        android:textColor="@color/cardview_light_background"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/fondo"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintStart_toStartOf="@+id/fondo" />

</androidx.constraintlayout.widget.ConstraintLayout>