<?xml version="1.0" encoding="utf-8"?>

<!-- Universidad Abierta y a Distancia de México
Asignatura: Programación móvil
Unidad 3: Aplicaciones Android con conexión a base de datos
Actividad 2: Preparando el desarrollo de aplicaciones Android
Alumno: Angel Isaac Nabor Torres
Matrícula: ES1921013978
Grupo: DS-DPMO-2301-B2-002
Docente: Verónica Espinoza Romo -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HistoricoActivity"
    android:layout_gravity="center">

    <View
        android:id="@+id/fondo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginStart="31dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="21dp"
        android:text="@string/titulohistorico"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvpendientes"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintStart_toStartOf="@+id/fondo"
        app:layout_constraintTop_toTopOf="@+id/fondo" />

    <TextView
        android:id="@+id/tvpendientes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginStart="91dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="12dp"
        android:text="@string/instpendientes"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lvpendientes"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintStart_toStartOf="@+id/fondo" />

    <ListView
        android:id="@+id/lvpendientes"
        android:layout_width="350dp"
        android:layout_height="229dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="20dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvestudiados"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintStart_toStartOf="@+id/fondo" />

    <TextView
        android:id="@+id/tvestudiados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginStart="92dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="17dp"
        android:text="@string/instestudiados"
        android:textColor="@color/cardview_light_background"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lvestudiados"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintStart_toStartOf="@+id/fondo" />

    <ListView
        android:id="@+id/lvestudiados"
        android:layout_width="350dp"
        android:layout_height="229dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="17dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/botonregresar"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintStart_toStartOf="@+id/fondo" />

    <Button
        android:id="@+id/botonregresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="159dp"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="28dp"
        android:text="@string/regresar"
        app:layout_constraintBottom_toBottomOf="@+id/fondo"
        app:layout_constraintEnd_toEndOf="@+id/fondo"
        app:layout_constraintStart_toStartOf="@+id/fondo" />



</androidx.constraintlayout.widget.ConstraintLayout>